--- a/app/src/main/resources/templates/addUser.html
+++ b/app/src/main/resources/templates/addUser.html
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add User</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <title>Login</title>
 </head>
 <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">User App</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/users/add}">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/users}">View Users</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
-    <h1>Add User</h1>
-    
-    <form action="#" th:action="@{/users/save}" th:object="${userForm}" method="post">
-        <label>First Name:</label>
-        <input type="text" th:field="*{firstName}" required><br>
-        
-        <label>Last Name:</label>
-        <input type="text" th:field="*{lastName}" required><br>
-        
-        <label>Email:</label>
-        <input type="email" th:field="*{email}" required><br>
-        
-        <button type="submit">Save User</button>
-    </form>
-    
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">My App</a>
+    <div class="ml-auto">
+        <a class="nav-link" th:href="@{/register}">Register</a>
+    </div>
+</nav>
+
+<h2>Login</h2>
+<form th:action="@{/login}" method="post">
+    <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required autofocus>
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+    </div>
+    <button type="submit">Login</button>
+</form>
+
 </body>
 </html>
