--- a/app/src/main/resources/templates/editUser.html
+++ b/app/src/main/resources/templates/editUser.html
@@ -15,20 +15,15 @@
 
 <div class="container mt-4">
     <h2>Edit User</h2>
-    <form action="#" th:action="@{/users/{id}/edit(id=${user.id})}" th:object="${user}" method="post">
-        <div class="form-group">
-            <label for="firstName">First Name:</label>
-            <input type="text" class="form-control" id="firstName" th:field="*{firstName}">
-        </div>
-        <div class="form-group">
-            <label for="lastName">Last Name:</label>
-            <input type="text" class="form-control" id="lastName" th:field="*{lastName}">
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" th:field="*{password}">
-        </div>
-        <button type="submit" class="btn btn-primary">Update User</button>
+    <form th:action="@{/users/{id}/edit(id=${user.id})}" th:object="${user}" method="post">
+        <input type="hidden" th:field="*{id}" />
+        <label for="firstName">First Name:</label>
+        <input type="text" id="firstName" th:field="*{firstName}" />
+        <label for="lastName">Last Name:</label>
+        <input type="text" id="lastName" th:field="*{lastName}" />
+        <label for="password">Password:</label>
+        <input type="password" id="password" th:field="*{password}" />
+        <button type="submit">Save</button>
     </form>
 </div>
 
