--- a/app/src/main/resources/templates/register.html
+++ b/app/src/main/resources/templates/register.html
@@ -17,23 +17,20 @@
 <h2>Register</h2>
 <form th:action="@{/register}" method="post" th:object="${user}">
     <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" th:field="*{firstName}" required autofocus>
-    </div>
-    <div>
         <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" th:field="*{firstName}" required>
+        <input type="text" id="firstName" th:field="*{firstName}" />
     </div>
     <div>
         <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" th:field="*{lastName}" required>
+        <input type="text" id="lastName" th:field="*{lastName}" />
     </div>
     <div>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" th:field="*{password}" required>
+        <input type="password" id="password" th:field="*{password}" />
     </div>
-    <button type="submit">Register</button>
+    <button type="submit">Save</button>
 </form>
+
 
 </body>
 </html>
