--- a/app/src/main/resources/templates/userList.html
+++ b/app/src/main/resources/templates/userList.html
@@ -31,12 +31,11 @@
             </thead>
             <tbody>
                 <tr th:each="user : ${users}">
-                    <td th:text="${user.id}">1</td>
+                    <td th:text="${user.id}"></td>
                     <td th:text="${user.firstName}">First Name</td>
                     <td th:text="${user.lastName}">Last Name</td>
-                    <td th:text="${user.password}">Password</td>
                     <td>
-                        <a th:href="@{'/' + ${user.id} + '/edit'}" class="btn btn-primary btn-sm">Edit</a>
+                        <a th:href="@{/users/{id}/edit(id=${user.id})}">Edit</a>
                         <a th:href="@{'/' + ${user.id} + '/delete'}" class="btn btn-danger btn-sm">Delete</a>
                     </td>
                 </tr>
